# c-game

./: CMakeLists.txt  Makefile  compile_commands.json  main.cpp  my_game
.cache/clangd/index/: main.cpp.12861436835A097F.idx
